--- a/package.json
+++ b/package.json
@@ -11,6 +11,28 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@hono/node-server": "^1.11.3",
+    "@hono/prometheus": "^1.0.1",
+    "@hono/zod-validator": "^0.2.2",
+    "@neondatabase/serverless": "^0.9.3",
+    "@pnpm/crypto.object-hasher": "^2.0.0",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.15",
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.31.2",
+    "express-rate-limit": "^7.3.1",
+    "hono": "^4.4.6",
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.3",
+    "pg": "^8.12.0",
+    "prom-client": "^15.1.2",
+    "zod": "^3.23.8"
+  },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
@@ -18,20 +40,7 @@
     "@types/pg": "^8.11.6",
     "drizzle-kit": "^0.22.7",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^4.15.2",
+    "tsx": "^4.15.5",
     "typescript": "^5.4.5"
-  },
-  "dependencies": {
-    "@hono/node-server": "^1.11.2",
-    "@hono/zod-validator": "^0.2.2",
-    "@neondatabase/serverless": "^0.9.3",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.31.2",
-    "hono": "^4.4.5",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.12.0",
-    "prom-client": "^15.1.2",
-    "zod": "^3.23.8"
   }
 }
